# cpp_sudoku_solver

./: .editorconfig  CMakeLists.txt  README.md
include/: sudoku_rules.hpp  sudoku_solver.hpp  sudoku_utils.hpp
samples/: sample_2.txt  sample_3.txt
src/: main.cpp  sudoku_solver.cpp
